# RansomWare

./: MANIFEST.in  PKG-INFO  README.md  RansomWare.py  RansomWare.spec  file_version_info.txt  pyproject.toml  setup.cfg  setup.py
RansomWare.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
