# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "RansomWare"
version = "1.0.0"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = 'This package implements a cross platform RansomWare.'
readme = {file = "README.md", content-type = "text/markdown"}
# url = "https://github.com/mauricelambert/RansomWare"
# download-url = "https://mauricelambert.github.io/info/python/security/RansomWare.pyz"
classifiers = [
    "Topic :: System",
    "Topic :: Security",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ['RansmWare', 'CryptoLocker', 'Malware', 'CyberAttack']
license = {text = "GPL-3.0 License"}
requires-python = ">=3.8"

[project.scripts]
RansomWare = "RansomWare:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/RansomWare"
"Documentation" = "https://mauricelambert.github.io/info/python/security/RansomWare.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/security/RansomWare.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/security/RansomWare.exe"
"Git Windows compiled executable" = "https://github.com/mauricelambert/RansomWare/releases/latest/"
"Windows compiled executable" = "https://sourceforge.net/projects/RansomWare/files/"

[tool.setuptools]
include-package-data = true
platforms = ['Windows']
py-modules = ['RansomWare']
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
