[metadata]
name = RansomWare
version = 1.0.0
author = Maurice Lambert
author_email = mauricelambert434@gmail.com
maintainer = Maurice Lambert
maintainer_email = mauricelambert434@gmail.com
description = This package implements a cross platform RansomWare.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mauricelambert/RansomWare
project_urls = Github=https://github.com/mauricelambert/RansomWare, Documentation=https://mauricelambert.github.io/info/python/security/RansomWare.html, Python Executable=https://mauricelambert.github.io/info/python/security/RansomWare.pyz, Windows Executable=https://mauricelambert.github.io/info/python/security/RansomWare.exe, Git Windows compiled executable=https://github.com/mauricelambert/RansomWare/releases/latest/, Windows compiled executable=https://sourceforge.net/projects/RansomWare/files/
download_url = https://mauricelambert.github.io/info/python/security/RansomWare.pyz
classifiers = 
	Topic :: System
	Topic :: Security
	Environment :: Console
	Operating System :: MacOS
	Natural Language :: English
	Programming Language :: Python
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft :: Windows
	Intended Audience :: System Administrators
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords = RansmWare, CryptoLocker, Malware, CyberAttack
platforms = Windows, Linux, MacOS
license = GPL-3.0 License
license_files = LICENSE.txt

[options]
include_package_data = True
python_requires = >=3.8
scripts = 
packages = 
py_modules = RansomWare
install_requires = 

[options.entry_points]
console_scripts = 
	RansomWare = RansomWare:main

[egg_info]
tag_build = 
tag_date = 0

